<resources>
    <string name="app_name">Table Affairs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">example@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_aboutus">About Us</string>
    <string name="title_activity_contactus">Contact Us</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_brands">Brands</string>
    <string name="title_activity_shoppingcart">Cart</string>
    <string name="title_activity_resetpassword">Reset Password</string>
    <string name="brand_name">Brand Name</string>
    <string name="brand_description">Brand Description</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="brand_with_products">Products in %1$s</string>
    <string name="brand_no_products">No products in %1$s</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="stock">Stock</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="our_products">Our Products</string>
    <string name="no_products">No products yet, come back later</string>
    <string name="remove_item_from_cart">Remove Item from Cart</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="_1">1</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="set_netPrice">Net Price: $%1$.2f</string>
    <string name="you_have_no_items_in_the_cart">You have no items in the cart</string>
    <string name="proceed_to_checkout">CHECKOUT</string>
    <string name="setPrice">Price: %1$.2f</string>
    <string name="set_inStock">In Stock: %1$d</string>
    <string name="setTotal">TOTAL AMOUNT : %1$.2f USD</string>
    <string name="add_items_in_cart">Add Items in cart</string>
    <string name="our_brands">Our Brands</string>
    <string name="about_table_affairs">About Table Affairs</string>
    <string name="contact_table_affairs">Contact Table Affairs</string>
    <string name="table_affairs_logo">Table Affairs logo</string>
    <string name="table_affairs_brands">Table Affairs Brands</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_no_account">Don\'t have an account?</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_account">Have account?</string>
    <string name="profile">
        Your Number #1 Fine dinning tableware outlet
    </string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_regestered_email">Enter your registered email to reset password</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password_reset">A password reset link has been sent to your email, please check your email to reset
        your password
    </string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="menu_myprofile">My Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="logout_message">Sure to logout?</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="text_communicate">Communicate</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="brands">Brands</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="table_affairs_check_out">Table Affairs - Check Out</string>
    <string name="select_delivery_means">Select Delivery means</string>
    <string name="normal_2">Normal - $2</string>
    <string name="express_3">Express - $3</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="confirm">Confirm</string>
    <string name="final_amount_0_0_usd">FINAL AMOUNT : 0.0 USD</string>
    <string name="your_shopping_cart">Your Shopping Cart Items</string>
    <string name="your_order_has_been_placed_successfully_with_order_id">Your order has been placed successfully with
        order id:
    </string>
    <string name="please_use_it_incase_you_want_to_track_your_ordered_products">Please use it in case you want to track
        your ordered products. \n\nMake sure to have enough cash upon receiving your delivery.
    </string>
    <string name="confirm_id_message">Please use it in case you want to track
        your ordered products.
    </string>
    <string name="thank_you_for_working_with_table_affairs">Thank you for shopping with Table Affairs</string>
    <string name="back_to_home">Back to Home >></string>
    <string name="my_orders">My Orders</string>
    <string name="set_greetings">Hello %1$s</string>
    <string name="set_payment">%1$.2f USD</string>
    <string name="set_orderTotalAmount">ORDER TOTAL AMOUNT : %1$.2f USD</string>
    <string name="no_orders">No Orders made yet</string>
    <string name="order_at">Ordered At :</string>
    <string name="order_id">Order Id :</string>
    <string name="products">Products :</string>
    <string name="address">Address :</string>
    <string name="amount">Amount :</string>
    <string name="payment_method">Payment method :</string>
    <string name="delivery_method">Delivery Method :</string>
    <string name="payment_status">Payment Status :</string>
    <string name="delivery_status">Delivery Status :</string>
</resources>
