<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".checkout.CheckOut">

    <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:text="@string/table_affairs_check_out"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/sandybrown"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:textSize="20sp"
            android:text="@string/final_amount_0_0_usd"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finalAmount"/>

    <EditText
            android:layout_marginTop="20dp"
            android:autofillHints="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_your_address"
            android:id="@+id/tv_address"/>

        <TextView
                android:textSize="17sp"
                android:text="@string/select_delivery_means"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_directions_car_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"/>
    <RadioGroup
            android:id="@+id/radioGroupDelivery"
            android:layout_width="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <RadioButton
                android:text="@string/normal_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_normal"/>
        <RadioButton
                android:text="@string/express_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delivery_express"/>
    </RadioGroup>
    <TextView
            android:text="@string/select_payment_method"
            android:textSize="17sp"
            android:drawableStart="@drawable/ic_payment_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"/>
    <RadioGroup
            android:id="@+id/radioGroupPayment"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <RadioButton
                android:text="@string/cash_on_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payment_cash"/>
        <RadioButton
                android:text="@string/pay_pal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payment_payPal"/>
    </RadioGroup>
    <Button
            android:text="@string/confirm"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/button_confirmOrder"/>

</LinearLayout>