<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".account.Login">

    <ImageView
            android:contentDescription="@string/table_affairs_logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/imageView2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:id="@+id/login_email"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/email"/>

    <EditText
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"/>

    <Button
            android:text="@string/login"
            android:clickable="true"
            android:layout_gravity="center"
            android:focusable="true"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_style"
            android:id="@+id/login_button"/>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginEnd="3dp"
                android:text="@string/text_no_account"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/button_sign_up"
                android:id="@+id/login_signUp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/login_forgot_password"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/login_forgot_password"
            android:layout_height="wrap_content"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:id="@+id/login_progressBar"/>
</LinearLayout>