<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:gravity="center"
        tools:context=".checkout.Ordered">

    <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_greetings"/>
    <TextView
            android:text="@string/your_order_has_been_placed_successfully_with_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_orderId"/>
    <TextView
            android:text="@string/please_use_it_incase_you_want_to_track_your_ordered_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"/>
    <TextView
            android:text="@string/thank_you_for_working_with_table_affairs"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/back_to_home"
            android:layout_marginTop="30dp"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/ic_home_black_24dp"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_height="wrap_content"
            android:id="@+id/tv_backToHome"/>
</LinearLayout>