<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="match_parent"
        tools:context=".account.MyOrder">

    <TableLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/order_id"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderId"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/order_at"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderDate"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderAddress"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/amount"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderPayment"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/payment_method"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderPaymentMethod"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/delivery_method"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_OrderDeliveryMethod"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/payment_status"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_PaymentStatus"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="5dp">
            <TextView
                    android:text="@string/delivery_status"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_DeliveryStatus"/>
        </TableRow>

    </TableLayout>
    <TextView
            android:text="@string/products"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"/>
    <ListView
            android:id="@+id/listViewOrderProducts"
            tools:listitem="@layout/ticket_order_product"
            android:divider="@drawable/separator_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    </ListView>

</LinearLayout>